GOCDB-5.6 Release (Release TBD). No DB schema changes.  
  - Reserved/Protected scope tags used to control the tagging of resources using 
    cascading/inheritance rules that limit which tags NGIs->Sites->Services->Downtimes 
    can declare. Allows certain sites (e.g. WLCG/Elixir sites) to apply tags 
    only to their resources and prevent other sites from using the same tags. 
    Allows controlled resource filtering in API and GUI. 
  - Bulk Add/Upload of multiple custom properties.  Allows the data models of 
    Sites, ServiceGroups, Services and Endpoints to be easily extended and customised. 
  - Downtime calendar view with fine-grained downtime filtering. 
  - Updated dateTimePicker JS lib. 

GOCDB-5.5 Release (02/12/2015 ). No DB schema changes.  
  - Added 'Action to take For all child service scopes' field when editing a 
    site so that the site's scopes can be easily inherited or used to override 
    all child service scopes. 
  - Adding <RECOGNISED_IN_PROJECTS/>  element to the XML output of the get_user
    query to show which projects a user's roles apply to. This is needed for 
    multi-tenant where a single GOC instance can host multiple projects.  
  - Adding <SCOPES/> element to the XML output of the following PI queries: 
    get_site, get_service, get_service_endpoint, get_ngi, get_service_group 
  - Adding 'jquery.multiple.select.js' lib to allow selecting of multiple scopes when 
    filtering sites/services/ngis/sgs in the GUI. This also required use of PI queries to 
    create new service methods in order to take advantage of the filtering by 
    multiple scopes with scope and scope_match params.  
  - Bug fix to allow comma chars in the values of custom extension properties.  
    The presence of a comma in the value of an ext prop was previously clashing 
    with the ScopeQueryBuilder which explodes the scope string on commas. The 
    fix removes this clash.    